--- a/stories/DataEntry/Form.stories.mdx
+++ b/stories/DataEntry/Form.stories.mdx
@@ -1,5 +1,7 @@
 import { Meta, Story, Canvas } from "@storybook/addon-docs/blocks";
 import Form from "@/src/Components/DataEntry/Form";
+import Input from "@/src/Components/DataEntry/Input";
+import TextArea from "@/src/Components/DataEntry/TextArea";
 
 <Meta
     title="Data Entry/Form"
@@ -7,19 +9,19 @@ import Form from "@/src/Components/DataEntry/Form";
 />
 
 ## Stories
-### example
+### All
 <Canvas>
-    <Story name="example" height="100px">
-        {{
-            template: `
-                <div>
-                    <Form>
-                        <div>jadfhlkasdhfjks</div>
-                    </Form>
-                </div>
-        `,
-            components: { Form },
-        }}
+    <Story name="All" height="100px">
+     {{
+        template: `
+            <div style="width:300px">
+                <Form>
+                    <Input placeholder="사이 사이 간격 12px"/>
+                    <TextArea/>
+                </Form>
+            </div>
+    `,
+        components: { Form, Input, TextArea },
+    }}
     </Story>
 </Canvas>
-
