--- a/stories/Message/Modal/PermissionModal.stories.mdx
+++ b/stories/Message/Modal/PermissionModal.stories.mdx
@@ -1,6 +1,7 @@
 import { ArgsTable, Meta, Story } from "@storybook/addon-docs/blocks";
 import PermissionModal from "@/src/Components/Message/Modal/PermissionModal";
 import Button from "@/src/Components/Button/Button";
+import { colorKeys } from "@/src/Elements/Core/Colors";
 
 <Meta
     title="Message/Modal/PermissionModal"
@@ -8,49 +9,32 @@ import Button from "@/src/Components/Button/Button";
     argTypes={{
         show: {
             description: "모달 활성화",
-            defaultValue: false,
             control: {
                 type: "boolean",
             },
         },
-        align: {
-            description: "정렬",
-            defaultValue: "center",
-            control: {
-                type: "select",
-                options: ["center", "left", "right"]
-            },
-            table: {
-                type: {
-                    summary: "string",
-                    detail: '"center" "left" "right"',
-                },
-            },
-        },
         successMessage: {
             description: "버튼명",
-            defaultValue: "확인",
             control: {
                 type: "text",
             },
         },
         cancelButtonColor: {
             description: "취소버튼 색상",
-            defaultValue: "gray600",
             control: {
-                type: "text"
+                type: "select",
+                options: colorKeys,
             }
         },
         confirmButtonColor: {
             description: "확인버튼 색상",
-            defaultValue: "gray600",
             control: {
-                type: "text"
+                type: "select",
+                options: colorKeys,
             }
         },
         persistent: {
             description: "overlay 클릭해도 모달 닫지 않기",
-            defaultValue: false,
             control: {
                 type: "boolean",
             },
@@ -70,17 +54,21 @@ import Button from "@/src/Components/Button/Button";
 
 export const Default = (args, { argTypes }) => ({
     props: Object.keys(argTypes),
-    components: { PermissionModal, Button },
+    methods: {
+        closePermissionModal() {
+            this.show = false;
+        },
+    },
     template: `
         <div>
             <Button @click="show = true">Open</Button>
             <PermissionModal
                 :show.sync="show"
-                :align="align"
-                :cancel-button-color="leftButtonColor"
-                :confirm-button-color="rightButtonColor"
+                :cancel-button-color="cancelButtonColor"
+                :confirm-button-color="confirmButtonColor"
                 :persistent="persistent"
                 :success-message="successMessage"
+                :success-callback="closePermissionModal"
             >
                 <template v-slot:title>
                     {{ title }}
@@ -89,7 +77,9 @@ export const Default = (args, { argTypes }) => ({
                     <div v-html="content" />
                 </template>
             </PermissionModal>
-        </div>`
+        </div>
+    `,
+    components: { PermissionModal, Button },
 });
 
 # PermissionModal
