--- a/stories/DataEntry/Dropdown.stories.mdx
+++ b/stories/DataEntry/Dropdown.stories.mdx
@@ -1,16 +1,18 @@
-import { ArgsTable, Meta, Story } from "@storybook/addon-docs/blocks";
+import { ArgsTable, Meta, Story, Canvas } from "@storybook/addon-docs/blocks";
 import Dropdown from "@/src/Components/DataEntry/Dropdown";
 import List from "@/src/Components/DataDisplay/List";
 import ListItem from "@/src/Components/DataDisplay/ListItem";
 import Divider from "@/src/Elements/Utility/Divider";
+import SearchInput from "@/src/Components/DataEntry/SearchInput";
 import Input from "@/src/Components/DataEntry/Input";
+import clickOutside from "@/directives/click-outside";
 
 <Meta
-    title="Data Entry/Dropdown"
+    title="Data Entry/Dropdown/Dropdown"
     component={ Dropdown }
     argTypes={{
         maxHeight: {
-            description: "Dropdown 최대 높이",
+            description: "리스트 최대 높이",
             defaultValue: "130px",
             control: { type: "text" },
         },
@@ -18,25 +20,44 @@ import Input from "@/src/Components/DataEntry/Input";
 />
 
 
-export const Basic = (args, { argTypes }) => ({
+export const Default = (args, { argTypes }) => ({
     props: Object.keys(argTypes),
-    components: { Dropdown, Input, List, ListItem, Divider },
+    components: { Dropdown, SearchInput, List, ListItem, Divider },
     data: () => ({
         listItems: ['List1', 'List2', 'List3', 'List4', 'List5'],
+        showSearchDropdown: false,
+        value: '',
     }),
+    computed: {
+        computedSearchInputMaxWidth() {
+            return { 'max-width': this. full ? '100%' : this.maxWidth };
+        }
+    },
+    methods: {
+        clickDropdownItem(item) {
+            this.value = item;
+        },
+    },
     template:
-        `<Dropdown :max-height="maxHeight" style="width: 197px">
-          <Input />
-          <template v-slot:content>
-            <List spacing>
-              <template v-for="(item, index) in listItems">
-                <ListItem :key="'list-item-' + index">
-                  {{ item }}
-                </ListItem>
-                <Divider :key="'divider-' + index" width="100%" height="1px" />
-              </template>
-            </List>
-          </template>
+        `<Dropdown :max-width="maxWidth" :max-height="maxHeight" :label="label" :full="full" :vertical="vertical">
+            <template v-slot:item>
+                <SearchInput
+                    full
+                    :showSearchDropdown.sync="showSearchDropdown"
+                    :value.sync="value"
+                    :style="computedSearchInputMaxWidth"
+                />
+            </template>
+            <template v-slot:list>
+                <List v-if="showSearchDropdown" spacing>
+                    <template v-for="(item, index) in listItems">
+                        <ListItem :key="'list-item-' + index" @click="clickDropdownItem(item)">
+                            {{ item }}
+                        </ListItem>
+                        <Divider :key="'divider-' + index" width="100%" height="1px" />
+                    </template>
+                </List>
+            </template>
         </Dropdown>`,
 });
 
@@ -44,8 +65,89 @@ export const Basic = (args, { argTypes }) => ({
 
 **Dropdown** 컴포넌트의 문서입니다.
 
-<Story name="Basic" height="150px">
-    {Basic.bind({})}
+<Story name="Default" height="150px">
+    {Default.bind({})}
 </Story>
 
-<ArgsTable story="Basic" />
+<ArgsTable story="Default" />
+
+## Stories
+### All
+<Canvas>
+    <Story name="All" height="240px">
+        {{
+            data: () => ({
+                showSearchDropdown: false,
+                showInputDropdown: false,
+                listItems: ['List1', 'List2'],
+                searchInputValue: '',
+                inputValue: '',
+            }),
+            methods: {
+                clickSearchInputDropdownItem(item) {
+                    this.searchInputValue = item;
+                },
+                clickInputDropdownItem(item) {
+                    this.inputValue = item;
+                },
+                closeList() {
+                    this.showInputDropdown = false;
+                },
+            },
+            template: `
+                <div>
+                    <div style="margin-bottom: 20px">
+                        <Dropdown max-width="230px" label="searchInput Dropdown">
+                            <template v-slot:item>
+                                <SearchInput
+                                    full
+                                    :showSearchDropdown.sync="showSearchDropdown"
+                                    :value.sync="searchInputValue"
+                                    style="width: 230px"
+                                />
+                            </template>
+                            <template v-slot:list>
+                                <List v-if="showSearchDropdown" spacing>
+                                    <template v-for="(item, index) in listItems">
+                                        <ListItem
+                                            :key="'list-item-' + index"
+                                            @click="clickSearchInputDropdownItem(item)"
+                                        >
+                                            {{ item }}
+                                        </ListItem>
+                                        <Divider :key="'divider-' + index" width="100%" height="1px" />
+                                    </template>
+                                </List>
+                            </template>
+                        </Dropdown>
+                    </div>
+                    <Dropdown max-width="230px" label="Input Dropdown">
+                        <template v-slot:item>
+                            <Input
+                                v-click-outside="closeList"
+                                :value.sync="inputValue"
+                                full
+                                @click="showInputDropdown = !showInputDropdown"
+                                style="width: 230px"
+                            />
+                        </template>
+                        <template v-slot:list>
+                            <List v-if="showInputDropdown" spacing>
+                                <template v-for="(item, index) in listItems">
+                                    <ListItem :key="'list-item-' + index" @click="clickInputDropdownItem(item)">
+                                        {{ item }}
+                                    </ListItem>
+                                    <Divider :key="'divider-' + index" width="100%" height="1px" />
+                                </template>
+                            </List>
+                        </template>
+                    </Dropdown>
+                </div>
+            `,
+            components: { Dropdown, SearchInput, List, ListItem, Divider, Input },
+            directives: {
+                clickOutside,
+            },
+        }}
+    </Story>
+</Canvas>
